Added Dot Component with dots in the right side of window

--- a/public/output.css
+++ b/public/output.css
@@ -737,3 +737,9 @@ body,
   --tw-text-opacity: 1;
   color: rgb(253 204 73 / var(--tw-text-opacity));
 }
+
+@media (min-width: 768px){
+  .md\:h-full{
+    height: 100%;
+  }
+}
